<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- Locale Picker -->
    <string name="clear_search_query_description">Clear query</string>
    <string name="language_picker_page">Language picker page</string>
    <string name="search_region">Search regions</string>
    <string name="search_region_page">Search region page</string>

    <!-- Battery Saver -->
    <string name="basic_battery_saver_title">Standard Battery Saver</string>
    <string name="basic_battery_saver_summary">Limits visual effects and background activity. Turns on dark theme, if not already on.</string>
    <string name="extreme_battery_saver_title">Extreme Battery Saver</string>
    <string name="extreme_battery_saver_summary">Includes all changes listed above. Also pauses non-essential apps and their notifications.</string>

    <!-- Battery Saver Schedule and Reminders -->
    <string name="battery_schedule_title">Schedule and reminders</string>
    <string name="battery_schedule_summary">Manage when Battery Saver turns on</string>
    <string name="battery_saver_schedule_category">Schedule</string>
    <string name="battery_saver_schedule_switch_title">Turn on based on battery level</string>
    <string name="battery_saver_schedule_switch_summary">Battery Saver turns on when battery falls to a level you set</string>
    <string name="battery_saver_reminder_category">Reminders</string>
    <string name="battery_saver_reminder_switch_title">Battery Saver reminders</string>
    <string name="battery_saver_reminder_switch_summary">Get reminders when battery is low</string>

    <!-- Adaptive Battery -->
    <string name="adaptive_battery_switch_title">Use Adaptive Battery</string>
    <string name="smart_battery_title">Adaptive Battery</string>

    <!-- Software Update -->
    <string name="software_update_entry_title">Software updates</string>
    <string name="software_update_banner_checking">Checking for updates…</string>
    <string name="software_update_banner_up_to_date">Your device is up to date</string>
    <string name="software_update_banner_update_available">Updates available</string>
    <string name="software_update_can_be_updated_header">Make your Pixel even better</string>
    <string name="software_update_up_to_date_header">Your Pixel is up to date</string>
    <string name="software_update_up_to_specific_date_summary">Updated to %1$s</string>
    <string name="software_update_pending_update_summary">Pending update</string>
    <string name="play_application_update_entry_title">App updates</string>
    <string name="play_application_detail_indication_summary">Check for updates</string>
    <string name="system_update_entry_title">System update</string>

    <!-- Expressive QR -->
    <string name="wifi_qr_code_animation_control">pause the animation</string>

    <!-- Advanced VPN -->
    <string name="advanced_vpn_preference_group_title">Built-in</string>
    <string name="vpn_preference_group_title">Others</string>

    <!-- Repair Mode -->
    <string name="repair_mode_title">Repair mode</string>
    <string name="repair_mode_summary">Secure environment for device repair</string>
    <string name="repair_mode_active_summary">In repair mode</string>
</resources>
